--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <span class="heading-primary--main">Outdoors</span>
                     <span class="heading-primary--sub">is where life happens</span>
                 </h1>
-                <a href="#" class="btn btn--white btn--animated" >Discover our tours</a>
+                <a href="#section-tours" class="btn btn--white btn--animated" >Discover our tours</a>
             </div>
         </header>  
         <main>
@@ -110,7 +110,7 @@
                 </div>    
             </section>
 
-            <section class="section-tours">
+            <section class="section-tours" id="section-tours">
                 <div class="u-center-text u-margin-bottom-big">
                     <h2 class="heading-secondary">
                         Most popular tours
@@ -148,7 +148,7 @@
                                         <p class="card__price-value">
                                             $297
                                         </p>
-                                        <a href="#" class="btn btn--white">
+                                        <a href="#popup" class="btn btn--white">
                                             Book now!
                                         </a>
                                     </div>
@@ -187,7 +187,7 @@
                                         <p class="card__price-value">
                                             $497
                                         </p>
-                                        <a href="#" class="btn btn--white">
+                                        <a href="#popup" class="btn btn--white">
                                             Book now!
                                         </a>
                                     </div>
@@ -226,7 +226,7 @@
                                         <p class="card__price-value">
                                             $896
                                         </p>
-                                        <a href="#" class="btn btn--white">
+                                        <a href="#popup" class="btn btn--white">
                                             Book now!
                                         </a>
                                     </div>
@@ -358,6 +358,23 @@
                 </div>
             </div>
         </footer>
+        <div class="popup" id="popup">
+            <div class="popup__content">
+                <div class="popup__left">
+                    <img src="img/nat-8.jpg" alt="Tour photo" class="popup__img">
+                    <img src="img/nat-9.jpg" alt="Tour photo" class="popup__img">
+                </div>
+                <div class="popup__right">
+                    <a href="#section-tours" class="popup__close">&times;</a>
+                    <h2 class="heading-secondary u-margin-bottom-small">Start booking now</h2>
+                    <h3 class="heading-tertiaty u-margin-bottom-small">Important &ndash; Please read these terms before booking</h3>
+                    <p class="popup__text">
+                        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Posuere sollicitudin aliquam ultrices sagittis orci a scelerisque purus. In hac habitasse platea dictumst quisque sagittis purus sit amet. Neque gravida in fermentum et. Integer feugiat scelerisque varius morbi enim nunc faucibus a. Viverra orci sagittis eu volutpat odio facilisis mauris sit amet. Nulla facilisi etiam dignissim diam quis enim lobortis. Risus quis varius quam quisque id. Vitae et leo duis ut diam quam nulla porttitor. Et magnis dis parturient montes. Mi tempus imperdiet nulla malesuada pellentesque elit eget. Libero nunc consequat interdum varius sit ame.Neque egestas congue quisque egestas diam in arcu cursus. Ullamcorper sit amet risus nullam.
+                    </p>
+                    <a href="#" class="btn btn--green">Book now</a>
+                </div>
+            </div>
+        </div>
 <!--
         <section class="grid-test">
             <div class = "row">
